Switched to sbt and added ansi parsing